[package]
name = "kv"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kv-client"
path = "src/bin/kv_client.rs"

[[bin]]
name = "kv-server"
path = "src/bin/kv_server.rs"

[dependencies]
raft = { git = "https://github.com/pingcap/raft-rs", default-features = false, features = ["prost-codec"] }
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.5"
bytes = "0.4"
tokio = { version = "0.2.0-alpha.6", features = ["signal"] }
futures-util-preview = { version = "0.3.0-alpha.19" }
slog = "2.5"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.1"
tracing-futures = { version = "0.0.1-alpha.1", default-features = false, features = ["std-future"] }
structopt = "0.2"
async-stream = "0.1"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
